Fixes top nav spacing on mobile.
- YESSSSSSSS!!!!!!!!!!!!!!!

--- a/wp-content/themes/specular/style.css
+++ b/wp-content/themes/specular/style.css
@@ -15,6 +15,24 @@ Tags: business, clean, corporate, design, drag-drop, localization, portfolio, sh
 @import url("css/shortcodes.css");
 @import url('css/animate.min.css');
 
+/*-----------------------------------------------------------------------------------*/
+/* Custom */
+@media screen and (max-width: 480px) {
+  header {
+    background-color: #0000FE !important;
+  }
+
+  header .container {
+    margin-right: 0;
+  }
+
+  #logo img.dark {
+    max-height: 100px;
+    height: 100px;
+    margin-top:0;
+    top:0;
+  }
+}
 
 
 /*-----------------------------------------------------------------------------------
